--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-cors": "^0.8.2",
         "hesto/multi-auth": "^1.0",
         "laravel/framework": "5.3.*"
     },
