--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-cors": "^0.8.2",
+        "fabpot/php-cs-fixer": "^2.0",
         "hesto/multi-auth": "^1.0",
         "laravel/framework": "5.3.*"
     },
