--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "barryvdh/laravel-cors": "^0.8.2",
         "fabpot/php-cs-fixer": "^2.0",
         "hesto/multi-auth": "^1.0",
+        "laracasts/generators": "^1.1",
         "laravel/framework": "5.3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
+        "laracasts/testdummy": "^2.3",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
