--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/factories/TestCase.php"
+            "tests/TestCase.php"
         ]
     },
     "scripts": {
