--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "fabpot/php-cs-fixer": "^2.0",
         "hesto/multi-auth": "^1.0",
         "laracasts/generators": "^1.1",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "nexmo/client": "@beta",
+        "nexmo/laravel": "1.0.0-beta3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
