--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laracasts/generators": "^1.1",
         "laravel/framework": "5.3.*",
         "nexmo/client": "@beta",
-        "nexmo/laravel": "1.0.0-beta3"
+        "nexmo/laravel": "1.0.0-beta3",
+        "intervention/image": "2.*",
+        "intervention/imagecache": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
