--- a/.env
+++ b/.env
@@ -21,12 +21,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=mailgun
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME="f4233f66aa68d5"
 MAIL_PASSWORD="b8763fe8422d6f"
 MAIL_ENCRYPTION=null
+
+MAILGUN_DOMAIN=sandbox21bfabe2272b4194a0622c3a97e2151f.mailgun.org
+MAILGUN_SECRET=key-2c9b1bcac4c7f535d09093234005200f
 
 PUSHER_APP_ID=
 PUSHER_KEY="fd450dd0"
