--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,15 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-cors": "^0.8.2",
+        "guzzlehttp/guzzle": "~6.0",
         "hesto/multi-auth": "^1.0",
+        "intervention/image": "2.*",
+        "intervention/imagecache": "2.*",
         "laracasts/generators": "^1.1",
         "laravel/framework": "5.3.*",
         "nexmo/client": "@beta",
         "nexmo/laravel": "1.0.0-beta3",
-        "intervention/image": "2.*",
-
-        "tymon/jwt-auth": "0.5.*",
-        "intervention/imagecache": "2.*",
-        
-
-        "intervention/imagecache": "2.*",
         "tymon/jwt-auth": "0.5.*"
-
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
