--- a/.env
+++ b/.env
@@ -28,10 +28,11 @@ MAIL_USERNAME="f4233f66aa68d5"
 MAIL_PASSWORD="b8763fe8422d6f"
 MAIL_ENCRYPTION=null
 
-MAILGUN_DOMAIN=sandbox21bfabe2272b4194a0622c3a97e2151f.mailgun.org
+MAILGUN_DOMAIN=www.creatver.com
 MAILGUN_SECRET=key-2c9b1bcac4c7f535d09093234005200f
 
-
+CONTACT_MAIL = tu_email@email.com
+CONTACT_NAME = tu-nombre
 
 
 PUSHER_APP_ID=
