--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
++
 APP_ENV=local
 APP_KEY=base64:AazytnPSrJHDpbKVGBNARjKHD/es1+nSy5Ji9A0d0lU=
 
@@ -5,9 +6,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=107.180.47.12
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=sista.cgtc2iu4gyx0.us-west-2.rds.amazonaws.com
+DB_PORT=5432
 DB_DATABASE=sista
 DB_USERNAME=sys_admin
 DB_PASSWORD=hNqJxISRxZ4w
