--- a/.env
+++ b/.env
@@ -35,7 +35,8 @@ MAILGUN_SECRET=key-2c9b1bcac4c7f535d09093234005200f
 CONTACT_MAIL = tu_email@email.com
 CONTACT_NAME = tu-nombre
 
-
+S3_KEY=
+S3_SECRET=
 PUSHER_APP_ID=
 PUSHER_KEY="fd450dd0"
 PUSHER_SECRET="49ce353b41545ad4"
