--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-cors": "^0.8.2",
+        "barryvdh/laravel-dompdf": "^0.8.0",
         "guzzlehttp/guzzle": "~6.0",
         "hesto/multi-auth": "^1.0",
         "intervention/image": "2.*",
