Servicio a domicilio env

--- a/.env
+++ b/.env
@@ -5,12 +5,12 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=sista.cgtc2iu4gyx0.us-west-2.rds.amazonaws.com
+DB_PORT=5432
 DB_DATABASE=sista
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sys_admin
+DB_PASSWORD=hNqJxISRxZ4w
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
